# wiqed

./: README.md  astgen.ml  context.ml  definition.ml  dune  dune-project  engine.ml  environment.ml  fpm.opam  grammar.bnf  input.ml  kernel.ml  kernel.mli  lexer.mll  lowering.ml  machine.ml  parser.mly  syntax.ml  term.ml  typing.ml  universe.ml  wiqed.opam
.github/workflows/: workflow.yml
docs/: grammar.bnf
examples/: basic.wiqed  fail.wiqed  trace.wiqed
lib/: ast.ml  astgen.ml  axiom.ml  definition.ml  dune  engine.ml  fact.ml  frontend.ml  input.ml  kernel.ml  kernel.mli  lexer.mll  lowering.ml  machine.ml  parser.mly  syntax.ml  term.ml  theorem.ml  universe.ml  utils.ml
lib/tests/: inline.ml  parsing.ml
tests/: inline.ml  parsing.ml
